--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ before_install:
 - gem install cocoapods -v '0.34.4'
 - pod install
 script:
-- xctool -workspace MyTodoList.xcworkspace -scheme YOURSCHEME -sdk iphonesimulator
+- xctool -workspace MyTodoList.xcworkspace -scheme MyTodoList -sdk iphonesimulator
   ONLY_ACTIVE_ARCH=NO
-- xcodebuild -workspace MyTodoList.xcworkspace -scheme YOURSCHEME -destination 'platform=iOS
+- xcodebuild -workspace MyTodoList.xcworkspace -scheme MyTodoList -destination 'platform=iOS
   Simulator,name=iPhone 6' test
 after_success:
 - chmod 755 chatwork.sh
