--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ before_install:
 - gem install cocoapods -v '0.34.4'
 - pod install
 script:
+- xctool -workspace MyTodoList.xcworkspace -scheme MyTodoList -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 - xcodebuild -workspace MyTodoList.xcworkspace -scheme MyTodoList -destination 'platform=iOS
   Simulator,name=iPhone 6' test
 env:
