--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
 - pod install
 script:
 - xctool -workspace MyTodoList.xcworkspace -scheme MyTodoList -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+- xcodebuild -workspace MyTodoList.xcworkspace -scheme MyTodoList -destination 'platform=iOS
   Simulator,name=iPhone 6' test
 env:
   global:
