--- a/MyTodoList.xcodeproj/xcshareddata/xcschemes/MyTodoListTests.xcscheme
+++ b/MyTodoList.xcodeproj/xcshareddata/xcschemes/MyTodoListTests.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:MyTodoList.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EE1B8619D4D84A7AB17778CE"
+               BuildableName = "libPods.a"
+               BlueprintName = "Pods"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -76,15 +90,6 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F0E924D0193A318B00A72164"
-            BuildableName = "MyTodoListTests.xctest"
-            BlueprintName = "MyTodoListTests"
-            ReferencedContainer = "container:MyTodoList.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
