add travis setting

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,17 @@ before_install:
 - gem install cocoapods -v '0.34.4'
 - pod install
 script:
-- xctool -workspace MyTodoList.xcworkspace -scheme MyTodoList -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+- xctool -workspace MyTodoList.xcworkspace -scheme MyTodoList -sdk iphonesimulator
+  ONLY_ACTIVE_ARCH=NO
 - xcodebuild -workspace MyTodoList.xcworkspace -scheme MyTodoList -destination 'platform=iOS
   Simulator,name=iPhone 6' test
 env:
   global:
-    - LANG=en_US.UTF-8
-    - LC_ALL=en_US.UTF-8
+  - LANG=en_US.UTF-8
+  - LC_ALL=en_US.UTF-8
 after_success:
 - chmod 755 slac.sh
 - ./slack.sh
 notifications:
   slack:
-    secure: iGT5vxadnF1Nun9HLVXWz7iXmLwsGKwHpGSg96oo97HvduNR8BBS5/FmLR+0nQNXXrmTEYqTtbW/t1JFGSCJWPiJbNYOLA0AwY3DcHPOrNFF/0Yv3O19pokmAcVrlQnFfzsiC7fGCbDHaqLonfwZbFJltO9QjiWjuZXF+F+vJSw=
-    format: html
-    template:
-      - '<a href="%{build_url}">%{repository}#%{build_number}</a> (<a href="%{compare_url}">%{branch} - %{commit} : %{author}</a>)'
+    secure: Gn8o+F4UucliwjHwIxSsCTKWSX13ptMnhllkx37fh9lJnymvHoT/Po8u0lHmsGDwD5QgxcVf/UtH/OJcmTIaEhi5XcUEF3edWJcD/L3QHuWPvMFU5+JVGRy62Qf094UdwEbS69tkzdhOvvDMbVrMW+m+JFuszFXLBYs2gCgCq14=
