--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ DerivedData
 
 ### Mac_OS ###
 .DS_STORE
+.DS_Store
 
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
